--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,67 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <servlet>
-    <servlet-name>IndexServlet</servlet-name>
-    <servlet-class>com.qiangge.web.IndexServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ToRegisterServlet</servlet-name>
-    <servlet-class>com.qiangge.web.ToRegisterServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>RegisterServlet</servlet-name>
-    <servlet-class>com.qiangge.web.RegisterServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ToLoginServlet</servlet-name>
-    <servlet-class>com.qiangge.web.ToLoginServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ToNewUserServlet</servlet-name>
-    <servlet-class>com.qiangge.web.ToNewUserServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>ToErrorServlet</servlet-name>
-    <servlet-class>com.qiangge.web.ToErrorServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.qiangge.web.LoginServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>LogoutServlet</servlet-name>
-    <servlet-class>com.qiangge.web.LogoutServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>IndexServlet</servlet-name>
-    <url-pattern>/index</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ToRegisterServlet</servlet-name>
-    <url-pattern>/ToRegister</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>RegisterServlet</servlet-name>
-    <url-pattern>/Register</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ToLoginServlet</servlet-name>
-    <url-pattern>/ToLogin</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ToNewUserServlet</servlet-name>
-    <url-pattern>/ToNewUser</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>ToErrorServlet</servlet-name>
-    <url-pattern>/ToError</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/Login</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>LogoutServlet</servlet-name>
-    <url-pattern>/Logout</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
+
+
+	<filter>
+		<!--过滤器名称 -->
+		<filter-name>struts2</filter-name>
+		<!--过滤器类 -->
+		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+	</filter>
+
+
+
+	<!--过滤器映射 -->
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<!--配置拦截路径 “/*”表示拦截所有的请求路径 -->
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 </web-app>
