--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -4,6 +4,29 @@
     <filter-name>struts2</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
+  <!--Turn your Session into FlushMode.COMMIT/AUTO or remove 'readOnly' marker from transaction definition.  -->
+  <filter>
+   <filter-name>OpenSessionInViewFilter</filter-name>
+   <filter-class>
+    org.springframework.orm.hibernate4.support.OpenSessionInViewFilter
+   </filter-class>
+   <init-param>
+    <param-name>sessionFactoryBeanName</param-name>
+    <param-value>sessionFactory</param-value>
+   </init-param>
+   <init-param>
+            <param-name>singleSession</param-name>
+            <param-value>true</param-value>           
+        </init-param>
+        <init-param>
+        <param-name> flushMode </param-name>
+   <param-value>AUTO </param-value>        
+        </init-param>
+</filter>
+  
+  
+  
+  
   <filter-mapping>
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
@@ -13,4 +36,9 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <listener>
+    <listener-class>
+  org.springframework.web.context.ContextLoaderListener
+  </listener-class>
+  </listener>
 </web-app>
